--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello this is my js code</h1>
+    <!-- datatypes in javascript -->
+    <p>Primitive and Non primitive data types</p>
+    <ul>
+        <li>type of data cant be altered</li>
+        <li>Doesn't provide any method</li>
+        <li>7 types of primitive datatype</li>
+    </ul>
+    <!-- always put script tag at the end of the program -->
+    <script src="main.js"></script>
     
 </body>
 </html>
