Functions and ajax, async,await

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>7 types of primitive datatype </li>
     </ul>
     <!-- always put script tag at the end of the program -->
-    <script src="main.js"></script>
+    <script src="my-js-file.js"></script>
     
 </body>
 </html>
