--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
-    <h1>Hello this is my js code</h1>
-    <!-- datatypes in javascript -->
-    <p>Primitive and Non primitive data types</p>
-    <ul>
-        <li>type of data cant be altered</li>
-        <li>Doesn't provide any method</li>
-        <li>7 types of primitive datatype </li>
-    </ul>
-    <!-- always put script tag at the end of the program -->
-    <script src="my-js-file.js"></script>
-    
+    Here You will be learning Async and Await functions and promises
+    check the console for the outputs
+    <script src="asyncFunction.js"></script>
 </body>
+
 </html>
